fixed aside (change withd to 25%), facing issue with footer (not covering left side end and bottom)

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -126,7 +126,7 @@ input:hover{
     border: solid #4d2d18;
     text-align: center;
     background-color: #8A6240;
-
+    width: 100%;
 }
 
 /* Job Title setting*/
@@ -151,4 +151,5 @@ input:hover{
     border-radius: 10px;
     font-size: 14px;
     padding: 5px;
+    width: 25%;
 }
